--- a/index.html
+++ b/index.html
@@ -276,19 +276,21 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 			<script type = "text/javascript" src = "assets/js/modernizr.js"></script>
-			<script>
+			<script src = "material.js"></script>
+			<script src = "scripts.js"></script>
+		<!--	<script>
 
-      if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('serviceworkerV2.js').then(function(registration) {
+				 if ('serviceWorker' in navigator) {
+					navigator.serviceWorker.register('serviceworkerV2.js').then(function(registration) {
 
-    console.log('Service worker registered successfully');
-  }).catch(function(err) {
-    console.log('Service worker registration failed: ', err);
-  });
-}
+					console.log('Service worker registered successfully');
+				  }).catch(function(err) {
+					console.log('Service worker registration failed: ', err);
+				  });
+				} 
 
       
-			</script>
+			</script> -->
 
 	</body>
 </html>
