--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 			<script type = "text/javascript" src = "assets/js/modernizr.js"></script>
-			<script src = "material.js"></script>
+			<script src = "assets/js/material.js"></script>
 			<script src = "scripts.js"></script>
 		<!--	<script>
 
