--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 				</div>
 
 			<!-- Highlights -->
-				<div class="wrapper style3">
+				<div class="wrapper style3" id = "socialLife">
 					<div class="title">Social Life</div>
 					<div id="highlights" class="container">
 						<header class="style1">
