--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 			<script src="assets/js/main.js"></script>
 			<script type = "text/javascript" src = "assets/js/modernizr.js"></script>
 			<script src = "assets/js/material.js"></script>
-			
+			<!--<script src = "scripts.js"></script>-->
 		<!--	<script>
 
 				 if ('serviceWorker' in navigator) {
