--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 			<script type = "text/javascript" src = "assets/js/modernizr.js"></script>
 			<script src = "assets/js/material.js"></script>
 			<script src = "scripts.js"></script>
-		<!--	<script>
+			<script>
 
 				 if ('serviceWorker' in navigator) {
 					navigator.serviceWorker.register('serviceworkerV2.js').then(function(registration) {
@@ -290,7 +290,7 @@
 				} 
 
       
-			</script> -->
+			</script> 
 
 	</body>
 </html>
