--- a/index.html
+++ b/index.html
@@ -277,15 +277,14 @@
 			<script src="assets/js/main.js"></script>
 			<script type = "text/javascript" src = "assets/js/modernizr.js"></script>
 			<script>
+				if ('serviceWorker' in navigator) {
+				  navigator.serviceWorker.register('serviceworkerV2.js', {scope: 'final-assignment-real'}).then(function(registration) {
+					console.log('Service worker registered successfully');
+				  }).catch(function(err) {
+					console.log('Service worker registration failed: ', err);
+				  });
+				}
 
-			  if ('serviceWorker' in navigator) {
-				navigator.serviceWorker.register('serviceworkerV2.js').then(function(registration) {
-
-				console.log('Service worker registered successfully');
-			  }).catch(function(err) {
-				console.log('Service worker registration failed: ', err);
-			  });
-			}
 
       
 			</script>
