--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 			<script>
 		
 		    if ('serviceWorker' in navigator) {
-				navigator.serviceWorker.register('serviceworker.js').then(function(registration) {
+				navigator.serviceWorker.register('serviceworkerV2.js').then(function(registration) {
 
 				console.log('Service worker registered successfully');
 			  }).catch(function(err) {
