--- a/staffs-uni.html
+++ b/staffs-uni.html
@@ -178,22 +178,14 @@
 			</script>
 			<script type = "text/javascript" src = "assets/js/modernizr.js"></script>
 			<script>
-				self.addEventListener('install', function(event) {
-				  console.log('install');
-				});
+		    if ('serviceWorker' in navigator) {
+				navigator.serviceWorker.register('serviceworkerV2.js').then(function(registration) {
 
-				self.addEventListener('activate', function(event) {
-				  console.log('activate');
-				});
-
-				self.addEventListener('fetch', function(event) {
-				  if (event.request.url.indexOf('material.teal-red.min.css') !== -1) {
-					console.log('Fetch request for:', event.request.url);
-					event.respondWith(new Response('header {background: green url("")!important}', {
-					  headers: { 'Content-Type': 'text/css' }
-					}));
-				  }
-				});
+				console.log('Service worker registered successfully');
+			  }).catch(function(err) {
+				console.log('Service worker registration failed: ', err);
+			  });
+			}
 			</script>
 
 	</body>
