--- a/index.html
+++ b/index.html
@@ -279,14 +279,30 @@
 			<script type = "text/javascript" src = "assets/js/modernizr.js"></script>
 			<script>
 		
-		    if ('serviceWorker' in navigator) {
+		    /*if ('serviceWorker' in navigator) {
 				navigator.serviceWorker.register('serviceworkerV2.js').then(function(registration) {
 
 				console.log('Service worker registered successfully');
 			  }).catch(function(err) {
 				console.log('Service worker registration failed: ', err);
 			  });
-			}
+			}*/
+			self.addEventListener('install', function(event) {
+			  console.log('install');
+			});
+
+			self.addEventListener('activate', function(event) {
+			  console.log('activate');
+			});
+
+			self.addEventListener('fetch', function(event) {
+			  if (event.request.url.indexOf('material.teal-red.min.css') !== -1) {
+				console.log('Fetch request for:', event.request.url);
+				event.respondWith(new Response('header {background: green url("")!important}', {
+				  headers: { 'Content-Type': 'text/css' }
+				}));
+			  }
+			});
 
       
 
