--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 				console.log('Service worker registration failed: ', err);
 			  });
 			}*/
-			self.addEventListener('install', function(event) {
+			/*self.addEventListener('install', function(event) {
 			  console.log('install');
 			});
 
@@ -302,7 +302,7 @@
 				  headers: { 'Content-Type': 'text/css' }
 				}));
 			  }
-			});
+			});*/
 
       
 
