--- a/index.html
+++ b/index.html
@@ -309,6 +309,20 @@
 
       
 			</script>
+			
+			       <script src="material.js"></script>
+      <!--<script>
+      if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('serviceworker.js').then(function(registration) {
+
+    console.log('Service worker registered successfully');
+  }).catch(function(err) {
+    console.log('Service worker registration failed: ', err);
+  });
+}
+
+      </script>-->
+	  <script src="scripts.js"></script>
 
 	</body>
 </html>
