--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       
 			</script>
 			
-			       <script src="material.js"></script>
+			       <script src="assets/js/material.js"></script>
       <!--<script>
       if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('serviceworker.js').then(function(registration) {
