--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ self.addEventListener('fetch', function(event) {
 }
 
       </script>-->
-	  <script src="scripts.js"></script>
+	  <!--<script src="scripts.js"></script>--?
 
 	</body>
 </html>
